--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "bootstrap/base.html" %}
-{% block title %}Faunabin: Paste text and share with your friends{% endblock %}
+{% block title %}Aquobin{% endblock %}
 
 {% block content %}
 <div class="jumbotron text-center">
@@ -11,14 +11,13 @@
   <form method="POST">
     <div class="form-group">
       <h4>Paste Title</h4>
-      <input type="text" class="form-control" name="title" required>
+      <input type="text" value= "file.txt" class="form-control" name="title" required>
     </div>
     <div class="form-group">
-      <textarea class="form-control" name="paste-text" rows="20" required>
-      </textarea>
+      <textarea class="form-control" name="paste-text" rows="20" required></textarea>
     </div>
     <div class="form-group text-center">
-      <button type="submit" class="btn btn-lg btn-primary">Create New Paste</button>
+      <button type="submit" class="btn btn-lg btn-primary">Create Paste</button>
     </div>
   </form>
 </div>
