--- a/templates/paste.html
+++ b/templates/paste.html
@@ -1,19 +1,17 @@
 {% extends "bootstrap/base.html" %}
-{% block title %}{{ paste.title }}{% endblock %}
+{% block title %}{{ paste.title }} - Aquobin{% endblock %}
 
 {% block content %}
 <div class="jumbotron text-center">
-  <h1>Faunabin</h1>
+  <h1>Aquobin</h1>
   <h3>Paste text and share with your friends</h3>
 </div>
 
 <div class="container">
   <form>
     <div class="form-group">
-      <h4>View Paste</h4>
-      <textarea class="form-control" rows="20" readonly>
-      {{ "\n" + paste.paste_text }}
-      </textarea>
+      <h4>{{ paste.title }} - {{ paste.identifier }} (Created on {{ paste.date }} at {{ paste.time }})</h4>
+      <textarea class="form-control" rows="20" readonly>{{ paste.paste_text }}</textarea>
     </div>
     <div class="form-group text-center">
       <a href="{{ url_for('index') }}"><button type="button" class="btn btn-lg btn-primary">Create Another Paste</button></a>
